[package]
name = "function-frame"
version = "0.1.0"
authors = ["snOm3ad <geronimooliver00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations"] }
syn = { version = "1.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
